Don't Use - As a Word Separator (It's annoying as fuck)

--- a/includes/alacritty/config.yml
+++ b/includes/alacritty/config.yml
@@ -47,7 +47,7 @@ mouse:
   triple_click: { threshold: 300 }
 
 selection:
-  semantic_escape_chars: ',│`|:" ()[]{}<>-'
+  semantic_escape_chars: ',│`|:" ()[]{}<>'
   save_to_clipboard: false
 
 dynamic_title: true
